Update theorem and example numbers in 2-4.html

--- a/teaching/300/300notes/2-4.html
+++ b/teaching/300/300notes/2-4.html
@@ -218,7 +218,7 @@
 </div>
 <div id="S2.SS4.Thmtheorem8" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#006600;">  Theorem </span>2.4.8.</h3>
+<span class="ltx_text" style="color:#006600;">  Theorem </span>2.4.5.</h3>
 <div id="S2.SS4.Thmtheorem8.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S2.SS4.Thmtheorem8.p1.m1" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> be a predicate in some universe of discourse. Then</p>
 <ol id="S2.I5" class="ltx_enumerate">
@@ -237,10 +237,9 @@
 </ol>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS4.Thmtheorem9" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.9.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.4.6.</h3>
 <div id="S2.SS4.Thmtheorem9.p1" class="ltx_para">
 <p class="ltx_p">Negate the following propositions, remembering not to use logical notation in your answers. These are called forming “<span class="ltx_text ltx_font_bold">useful denials</span>” of these propositions. (Note: we are not proving or disproving these statements; we are just negating them!)</p>
 <ol id="S2.I6" class="ltx_enumerate">
@@ -249,7 +248,7 @@
 <div id="S2.I6.ix1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">For all <math id="S2.I6.ix1.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>, <math id="S2.I6.ix1.p1.m2" class="ltx_Math" alttext="n^{2}\geq 5" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>≥</mo><mn>5</mn></mrow></math>.</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I6.ix2" class="ltx_item" style="list-style-type:none;">
@@ -257,7 +256,7 @@
 <div id="S2.I6.ix2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">For all <math id="S2.I6.ix2.p1.m1" class="ltx_Math" alttext="n\in\mathbb{Z}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℤ</mi></mrow></math>, there exists <math id="S2.I6.ix2.p1.m2" class="ltx_Math" alttext="m\in\mathbb{Z}" display="inline"><mrow><mi>m</mi><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S2.I6.ix2.p1.m3" class="ltx_Math" alttext="n+m=0" display="inline"><mrow><mrow><mi>n</mi><mo>+</mo><mi>m</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>.</p>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I6.ix3" class="ltx_item" style="list-style-type:none;">
@@ -283,7 +282,7 @@
 </div>
 <div id="S2.SS4.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.5.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.4.7.</h3>
 <div id="S2.SS4.Thmtheorem5.p1" class="ltx_para">
 <p class="ltx_p">Determine whether the following statements are true, false, or neither. Prove each statement which is true, and provide a counterexample for each statement which is false.</p>
 <ol id="S2.I4" class="ltx_enumerate">
@@ -333,7 +332,7 @@
 <div id="S2.SS4.Thmtheorem10" class="ltx_theorem ltx_theorem_example">
 <p>In formal proofs you will not see mathematicians use abbreviations like <math><mi>∀</mi></math> and <math><mi>∃</mi></math>, if for no other reason that it makes the proof harder to read. For the very same reason, you will see us label some parts of our proofs as "scratch work". These are considered parts of the problem to help us understand the statement, and they are typically never included in proofs.</p>
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.10.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.4.8.</h3>
 <div id="S2.SS4.Thmtheorem10.p1" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Disprove</span> the following statement. Remember, do not use logical notation in your proof.</p>
 <table id="S2.Ex2" class="ltx_equation ltx_eqn_table">
@@ -350,7 +349,7 @@
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS4.Thmtheorem11" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.11.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.4.9.</h3>
 <div id="S2.SS4.Thmtheorem11.p1" class="ltx_para">
 <p class="ltx_p">Consider the statement</p>
 <table id="S2.Ex3" class="ltx_equation ltx_eqn_table">
