Refine explanations in 3-1.html
Updated text for clarity and structure in explanations.

--- a/teaching/300/300notes/3-1.html
+++ b/teaching/300/300notes/3-1.html
@@ -152,7 +152,7 @@
 <p class="ltx_p">From Steps 2 onward we are proving that, if the statement from the previous step has been proven true, then the next step in the sequence should also be true. This is known as the <span class="ltx_text ltx_font_bold">domino effect</span>: if one domino <math id="S3.SS1.p10.m1" class="ltx_Math" alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> gets knocked down, then so does the next domino <math id="S3.SS1.p10.m2" class="ltx_Math" alttext="P(n+1)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
 </div>
 <div id="S3.SS1.p11" class="ltx_para ltx_noindent">
-<p class="ltx_p">This is an interesting process. In terms of time to complete it is not any better, but it does set up an interesting structure. In fact, we can shorten everything in steps 2 onward into one step: <span class="ltx_text ltx_font_italic">prove that the truth of the previous statement implies the truth of the statement with the next number in line</span>.</p>
+<p class="ltx_p">This is an interesting process. In terms of time to complete it is not any better, but it does set up a useful structure. Here comes the trick: we can shorten everything in steps 2 onward into one step: <span class="ltx_text ltx_font_italic">prove that the truth of the previous statement implies the truth of the statement with the next number in line</span>.</p>
 </div>
 <div id="S3.SS1.p12" class="ltx_para ltx_noindent">
 <ol id="S3.I4" class="ltx_enumerate">
@@ -202,16 +202,16 @@
 <p class="ltx_p">Watch the following Mr. Beast video and describe how it relates to induction. How many dominoes does Mr. Beast physically knock over? Why do <span class="ltx_text ltx_font_italic">all</span> of the dominoes knock over?</p>
 </div>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
 <figure id="S3.SS1.fig1" class="ltx_figure"><img src="images/qrbeast.png" id="S3.SS1.g1" class="ltx_graphics ltx_img_square" width="100" height="100" alt="QR Code for Mr Beast Domino video">
 </figure>
+  <div class="large-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.1.4.</h3>
 <div id="S3.SS1.Thmtheorem4.p1" class="ltx_para">
-<p class="ltx_p">Prove that, for all <math id="S3.SS1.Thmtheorem4.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>,</p>
+<p class="ltx_p">Prove using induction that, for all <math id="S3.SS1.Thmtheorem4.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>,</p>
 <table id="S3.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -252,11 +252,12 @@
 </div>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S3.SS1.p14" class="ltx_para ltx_noindent">
 <p class="ltx_p">Is this statement true when reframed as follows? “For all natural numbers <math id="S3.SS1.p14.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, <math id="S3.SS1.p14.m2" class="ltx_Math" alttext="2^{n}&gt;n+1" display="inline"><mrow><msup><mn>2</mn><mi>n</mi></msup><mo>&gt;</mo><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></mrow></math>.” Prove or disprove.</p>
 </div>
-  <div class="half-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS1.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
