--- a/teaching/300/300notes/3-2.html
+++ b/teaching/300/300notes/3-2.html
@@ -101,9 +101,18 @@
 <p class="ltx_p">Then <math id="S3.SS2.Thmtheorem1.p1.m2" class="ltx_Math" alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> is true for all <math id="S3.SS2.Thmtheorem1.p1.m3" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>.</p>
 </div>
 </div>
+<div id="S3.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#800000;">  Example </span>3.2.3.</h3>
+<div id="S3.SS2.Thmtheorem3.p1" class="ltx_para">
+<p class="ltx_p">Define a sequence of numbers by <math id="S3.SS2.Thmtheorem3.p1.m1" class="ltx_Math" alttext="a_{1}=1" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo>=</mo><mn>1</mn></mrow></math>, <math id="S3.SS2.Thmtheorem3.p1.m2" class="ltx_Math" alttext="a_{2}=3" display="inline"><mrow><msub><mi>a</mi><mn>2</mn></msub><mo>=</mo><mn>3</mn></mrow></math>, and <math id="S3.SS2.Thmtheorem3.p1.m3" class="ltx_Math" alttext="a_{n}=3a_{n-1}-2a_{n-2}" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><mrow><mn>3</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><mo>−</mo><mrow><mn>2</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>2</mn></mrow></msub></mrow></mrow></mrow></math> for <math id="S3.SS2.Thmtheorem3.p1.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> being a natural number greater than 2. Then show that <math id="S3.SS2.Thmtheorem3.p1.m5" class="ltx_Math" alttext="a_{n}=2^{n}+1" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><msup><mn>2</mn><mi>n</mi></msup><mo>+</mo><mn>1</mn></mrow></mrow></math> for all <math id="S3.SS2.Thmtheorem3.p1.m6" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>. (Consider how many base cases you have to verify before moving onto the inductive step.)</p>
+</div>
+</div>
+  <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS2.SSS1.p6" class="ltx_para ltx_noindent">
-<p class="ltx_p">Our book generalizes this one step further. In an elegant solution like that displayed in the Mr. Beast video from Example 2, we only need to knock over one domino for the rest to get knocked over. Sometimes the dominoes don’t work as nicely and we have to knock over the first couple of dominoes ourselves. But our process totally allows for this!</p>
+<p class="ltx_p">We can generalize this one step further. In an elegant solution like that displayed in the Mr. Beast video from the previous section, we only need to knock over one domino for the rest to get knocked over. Sometimes the dominoes don’t work as nicely and we have to knock over the first couple of dominoes ourselves. But our process totally allows for this!</p>
 </div>
 <div id="S3.SS2.Thmtheorem2" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -127,15 +136,6 @@
 <p class="ltx_p">Then <math id="S3.SS2.Thmtheorem2.p1.m2" class="ltx_Math" alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> is true for all <math id="S3.SS2.Thmtheorem2.p1.m3" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>.</p>
 </div>
 </div>
-<div id="S3.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
-<h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>3.2.3.</h3>
-<div id="S3.SS2.Thmtheorem3.p1" class="ltx_para">
-<p class="ltx_p">Define a sequence of numbers by <math id="S3.SS2.Thmtheorem3.p1.m1" class="ltx_Math" alttext="a_{1}=1" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo>=</mo><mn>1</mn></mrow></math>, <math id="S3.SS2.Thmtheorem3.p1.m2" class="ltx_Math" alttext="a_{2}=3" display="inline"><mrow><msub><mi>a</mi><mn>2</mn></msub><mo>=</mo><mn>3</mn></mrow></math>, and <math id="S3.SS2.Thmtheorem3.p1.m3" class="ltx_Math" alttext="a_{n}=3a_{n-1}-2a_{n-2}" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><mrow><mn>3</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><mo>−</mo><mrow><mn>2</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>2</mn></mrow></msub></mrow></mrow></mrow></math> for <math id="S3.SS2.Thmtheorem3.p1.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> being a natural number greater than 2. Then show that <math id="S3.SS2.Thmtheorem3.p1.m5" class="ltx_Math" alttext="a_{n}=2^{n}+1" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><msup><mn>2</mn><mi>n</mi></msup><mo>+</mo><mn>1</mn></mrow></mrow></math> for all <math id="S3.SS2.Thmtheorem3.p1.m6" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>. (Consider how many base cases you have to verify before moving onto the inductive step.)</p>
-</div>
-</div>
-  <div class="half-answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS2.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -146,6 +146,7 @@
 </div>
   <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS2.SSS1.p7" class="ltx_para">
 <p class="ltx_p">To get to our next major example, we first need to make a definition that will be prevalent in Chapter 4:</p>
 </div>
@@ -160,23 +161,23 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.2.6.</h3>
 <div id="S3.SS2.Thmtheorem6.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">Pick a subset of <math id="S3.SS2.Thmtheorem6.p1.m1" class="ltx_Math" alttext="\mathbb{N}" display="inline"><mi>ℕ</mi></math>.</p>
+<p class="ltx_p">Find two or three meaningfully different subsets of <math id="S3.SS2.Thmtheorem6.p1.m1" class="ltx_Math" alttext="\mathbb{N}" display="inline"><mi>ℕ</mi></math>.</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S3.SS2.Thmtheorem6.p2" class="ltx_para">
-<p class="ltx_p">Now pick a <span class="ltx_text ltx_font_bold">proper subset</span> of <math id="S3.SS2.Thmtheorem6.p2.m1" class="ltx_Math" alttext="\mathbb{N}" display="inline"><mi>ℕ</mi></math> with infinitely many elements. (A <span class="ltx_text ltx_font_bold">proper subset</span> of <math id="S3.SS2.Thmtheorem6.p2.m2" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is a subset which is not equal to <math id="S3.SS2.Thmtheorem6.p2.m3" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>.)</p>
+<p class="ltx_p">Now pick two or three more <span class="ltx_text ltx_font_bold">proper subsets</span> of <math id="S3.SS2.Thmtheorem6.p2.m1" class="ltx_Math" alttext="\mathbb{N}" display="inline"><mi>ℕ</mi></math> with infinitely many elements. (A <span class="ltx_text ltx_font_bold">proper subset</span> of <math id="S3.SS2.Thmtheorem6.p2.m2" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is a subset which is not equal to <math id="S3.SS2.Thmtheorem6.p2.m3" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>.)</p>
 </div>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S3.SS2.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.2.7.</h3>
 <div id="S3.SS2.Thmtheorem7.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">Of the two examples you gave above, what is the <span class="ltx_text ltx_font_italic">least</span> element of each subset?</p>
+<p class="ltx_p">Of the examples you gave above, what is the <span class="ltx_text ltx_font_italic">least</span> element of each subset?</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S3.SS2.Thmtheorem7.p2" class="ltx_para">
 <p class="ltx_p">Can you come up with an example of a subset of <math id="S3.SS2.Thmtheorem7.p2.m1" class="ltx_Math" alttext="\mathbb{N}" display="inline"><mi>ℕ</mi></math> with no least element?</p>
@@ -189,7 +190,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.2.8.</h3>
 <div id="S3.SS2.Thmtheorem8.p1" class="ltx_para">
-<p class="ltx_p">We seem to be pretty convinced in the following statement: “Every nonempty subset of the natural numbers has a least element.” Why is the term “nonempty” important in this statement?</p>
+<p class="ltx_p">Perhaps we can skeptically convince ourselves in the following statement: “Every nonempty subset of the natural numbers has a least element.” Why is the term “nonempty” important in this statement?</p>
 </div>
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
@@ -295,16 +296,11 @@
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S3.SS2.Thmtheorem15.p6" class="ltx_para ltx_noindent">
-<p class="ltx_p">Derive a contradiction if <math id="S3.SS2.Thmtheorem15.p6.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is composite with <math id="S3.SS2.Thmtheorem15.p6.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> being in <math id="S3.SS2.Thmtheorem15.p6.m3" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math>. (Here you should use that <math id="S3.SS2.Thmtheorem15.p6.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is the <span class="ltx_text ltx_font_italic">least</span> element in <math id="S3.SS2.Thmtheorem15.p6.m5" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math>.)</p>
+<p class="ltx_p">Derive a contradiction if <math id="S3.SS2.Thmtheorem15.p6.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is composite with <math id="S3.SS2.Thmtheorem15.p6.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> being in <math id="S3.SS2.Thmtheorem15.p6.m3" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math>. (Here you should use that <math id="S3.SS2.Thmtheorem15.p6.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is the <span class="ltx_text ltx_font_italic">least</span> element in <math id="S3.SS2.Thmtheorem15.p6.m5" class="ltx_Math" alttext="C" display="inline"><mi>C</mi></math>.) Then conclude the proof.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div id="S3.SS2.Thmtheorem15.p7" class="ltx_para ltx_noindent">
-<p class="ltx_p">Conclude the proof.</p>
 </div>
-</div>
-  <div class="answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 </section>
 </article>
