Update examples and theorems in 3-2.html

--- a/teaching/300/300notes/3-2.html
+++ b/teaching/300/300notes/3-2.html
@@ -103,7 +103,7 @@
 </div>
 <div id="S3.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>3.2.3.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>3.2.2.</h3>
 <div id="S3.SS2.Thmtheorem3.p1" class="ltx_para">
 <p class="ltx_p">Define a sequence of numbers by <math id="S3.SS2.Thmtheorem3.p1.m1" class="ltx_Math" alttext="a_{1}=1" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo>=</mo><mn>1</mn></mrow></math>, <math id="S3.SS2.Thmtheorem3.p1.m2" class="ltx_Math" alttext="a_{2}=3" display="inline"><mrow><msub><mi>a</mi><mn>2</mn></msub><mo>=</mo><mn>3</mn></mrow></math>, and <math id="S3.SS2.Thmtheorem3.p1.m3" class="ltx_Math" alttext="a_{n}=3a_{n-1}-2a_{n-2}" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><mrow><mn>3</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><mo>−</mo><mrow><mn>2</mn><mo>⁢</mo><msub><mi>a</mi><mrow><mi>n</mi><mo>−</mo><mn>2</mn></mrow></msub></mrow></mrow></mrow></math> for <math id="S3.SS2.Thmtheorem3.p1.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> being a natural number greater than 2. Then show that <math id="S3.SS2.Thmtheorem3.p1.m5" class="ltx_Math" alttext="a_{n}=2^{n}+1" display="inline"><mrow><msub><mi>a</mi><mi>n</mi></msub><mo>=</mo><mrow><msup><mn>2</mn><mi>n</mi></msup><mo>+</mo><mn>1</mn></mrow></mrow></math> for all <math id="S3.SS2.Thmtheorem3.p1.m6" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>. (Consider how many base cases you have to verify before moving onto the inductive step.)</p>
 </div>
@@ -116,7 +116,7 @@
 </div>
 <div id="S3.SS2.Thmtheorem2" class="ltx_theorem ltx_theorem_theorem">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#006600;">  Theorem </span>3.2.2 Complete Induction.</h3>
+<span class="ltx_text" style="color:#006600;">  Theorem </span>3.2.3 Complete Induction.</h3>
 <div id="S3.SS2.Thmtheorem2.p1" class="ltx_para">
 <p class="ltx_p">Let <math id="S3.SS2.Thmtheorem2.p1.m1" class="ltx_Math" alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> be a predicate over the natural numbers. Assume the following:</p>
 <ol id="S3.I4" class="ltx_enumerate">
@@ -190,7 +190,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.2.8.</h3>
 <div id="S3.SS2.Thmtheorem8.p1" class="ltx_para">
-<p class="ltx_p">Perhaps we can skeptically convince ourselves in the following statement: “Every nonempty subset of the natural numbers has a least element.” Why is the term “nonempty” important in this statement?</p>
+<p class="ltx_p">Perhaps we can convince ourselves in the following statement, keeping a healthy amount of skepticism about us: “Every nonempty subset of the natural numbers has a least element.” Why is the term “nonempty” important in this statement?</p>
 </div>
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
