Add pagination and example section to 3-2.html

--- a/teaching/300/300notes/3-2.html
+++ b/teaching/300/300notes/3-2.html
@@ -101,6 +101,7 @@
 <p class="ltx_p">Then <math id="S3.SS2.Thmtheorem1.p1.m2" class="ltx_Math" alttext="P(n)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow></math> is true for all <math id="S3.SS2.Thmtheorem1.p1.m3" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>.</p>
 </div>
 </div>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S3.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>3.2.2.</h3>
