--- a/teaching/300/300notes/4-1.html
+++ b/teaching/300/300notes/4-1.html
@@ -165,7 +165,7 @@
 <div id="S4.I4.ix2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Write the following set description in terms of set-builder notation: “the set of all even integers”. (There is more than one correct answer… can you find multiple answers?)</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
