--- a/teaching/300/300notes/4-2.html
+++ b/teaching/300/300notes/4-2.html
@@ -113,7 +113,7 @@ _{j}\in A_{j}\text{ for all }1\leq j\leq n\}." display="block"><mrow><mrow><mrow
 </div>
 </div>
 <div id="S4.SS2.SSS1.p4" class="ltx_para">
-<p class="ltx_p">You will see us start to do fewer and fewer proofs using these concepts in class; indeed, you will have to do more of the proofs utilizing these concepts on your own now. This is important to strengthen your ability to verify mathematical statements yourself. It is a scary step to take… it scared me too when I was at this point in the class. Here is a quote from Leon Henkin, an American logician at UC Berkeley, that addresses why we are making this step:</p>
+<p class="ltx_p">You will see us start to do fewer and fewer proofs using new concepts in class; indeed, you will have to do more of the proofs utilizing these concepts on your own now. This is important to strengthen your ability to verify mathematical statements yourself. It is a scary step to take… it scared me too when I was at this point in the class. Here is a quote from Leon Henkin, an American logician at UC Berkeley, that addresses why we are making this step:</p>
 <blockquote class="ltx_quote">
 <p class="ltx_p">One of the big misapprehensions about mathematics that we perpetrate in our classrooms is that the teacher always seems to know the answer to any problem that is discussed. This gives students the idea that there is a book somewhere with all the right answers to all of the interesting questions, and that teachers know those answers. And if one could get hold of the book, one would have everything settled. That’s so unlike the true nature of mathematics.</p>
 </blockquote>
@@ -141,10 +141,29 @@ _{j}\in A_{j}\text{ for all }1\leq j\leq n\}." display="block"><mrow><mrow><mrow
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>4.2.7.</h3>
 <div id="S4.SS2.Thmtheorem7.p1" class="ltx_para">
-<p class="ltx_p">Let <math id="S4.SS2.Thmtheorem7.p1.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> and <math id="S4.SS2.Thmtheorem7.p1.m2" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> be sets, each within some universe of discourse. Conjecture a way to rewrite <math id="S4.SS2.Thmtheorem7.p1.m3" class="ltx_Math" alttext="(A\times B)^{C}" display="inline"><msup><mrow><mo stretchy="false">(</mo><mrow><mi>A</mi><mo lspace="0.222em" rspace="0.222em">×</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow><mi>C</mi></msup></math> that meaningfully involves <math id="S4.SS2.Thmtheorem7.p1.m4" class="ltx_Math" alttext="A^{C}" display="inline"><msup><mi>A</mi><mi>C</mi></msup></math> and <math id="S4.SS2.Thmtheorem7.p1.m5" class="ltx_Math" alttext="B^{C}" display="inline"><msup><mi>B</mi><mi>C</mi></msup></math>. For homework, prove your conjecture.</p>
+<p class="ltx_p">Let <math id="S4.SS2.Thmtheorem7.p1.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> and <math id="S4.SS2.Thmtheorem7.p1.m2" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> be sets, each within some universe of discourse. Conjecture a way to rewrite <math id="S4.SS2.Thmtheorem7.p1.m3" class="ltx_Math" alttext="(A\times B)^{C}" display="inline"><msup><mrow><mo stretchy="false">(</mo><mrow><mi>A</mi><mo lspace="0.222em" rspace="0.222em">×</mo><mi>B</mi></mrow><mo stretchy="false">)</mo></mrow><mi>C</mi></msup></math> that meaningfully involves <math id="S4.SS2.Thmtheorem7.p1.m4" class="ltx_Math" alttext="A^{C}" display="inline"><msup><mi>A</mi><mi>C</mi></msup></math> and <math id="S4.SS2.Thmtheorem7.p1.m5" class="ltx_Math" alttext="B^{C}" display="inline"><msup><mi>B</mi><mi>C</mi></msup></math>. For homework, prove your conjecture. (Hint: what is <math>
+  <mrow>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mo form="prefix" stretchy="false">[</mo>
+    <mn>0,1</mn>
+    <mo form="postfix" stretchy="false">]</mo>
+    <mo>×</mo>
+    <mo form="prefix" stretchy="false">[</mo>
+    <mn>0,1</mn>
+    <mo form="postfix" stretchy="false">]</mo>
+    <msup>
+      <mo form="postfix" stretchy="false">)</mo>
+      <mi>c</mi>
+    </msup>
+  </mrow>
+</math>? Draw a picture.)</p>
 </div>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
+<p class="ltx_p">(More space for Example 4.2.7.)</p>
+    <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 </section>
@@ -177,7 +196,7 @@ _{j}\in A_{j}\text{ for all }1\leq j\leq n\}." display="block"><mrow><mrow><mrow
   <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S4.SS2.Thmtheorem8.p5" class="ltx_para ltx_noindent">
-<p class="ltx_p">What if there are <math id="S4.SS2.Thmtheorem8.p5.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> distinct letters in the hat that the student could choose from? How many possible combinations of letters can the student have?</p>
+<p class="ltx_p">What if there are <math id="S4.SS2.Thmtheorem8.p5.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> distinct letters (not neceesarily "M", "A", "R", "O", "N") in the hat that the student could choose from? How many possible combinations of letters can the student have?</p>
 </div>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
@@ -205,6 +224,8 @@ _{j}\in A_{j}\text{ for all }1\leq j\leq n\}." display="block"><mrow><mrow><mrow
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
+<p class="ltx_p">(More space for Theorem 4.2.10.)</p>
 </section>
 </section>
 </article>
