--- a/teaching/300/300notes/5-2.html
+++ b/teaching/300/300notes/5-2.html
@@ -246,7 +246,21 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.2.5.</h3>
 <div id="S5.SS2.Thmtheorem5.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">Using the skeleton version of the proof below, complete the proof of the statement: the function <math id="S5.SS2.Thmtheorem5.p1.m1" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math> is <span class="ltx_text ltx_font_bold">injective</span>.</p>
+<p class="ltx_p">Using the skeleton version of the proof below, complete the proof of the statement: the function <math>
+  <mrow>
+    <mi>f</mi>
+    <mo lspace="0.2222em" rspace="0.2222em">:</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+    <mo stretchy="false">→</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+  </mrow>
+</math> defined by <math id="S5.SS2.Thmtheorem5.p1.m1" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math> is <span class="ltx_text ltx_font_bold">injective</span>.</p>
 </div>
 <div id="S5.SS2.Thmtheorem5.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">A Skeleton Version of a Function <math id="S5.SS2.Thmtheorem5.p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> Being Injective.</span></p>
@@ -264,7 +278,21 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Give the definition of <math id="S5.SS2.Thmtheorem5.p4.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math>.</th>
 <td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">
 <span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
-<span class="ltx_p">Let <math id="S5.SS2.Thmtheorem5.p4.m2" class="ltx_Math" alttext="f:\mathbb{R}\rightarrow\mathbb{R}" display="inline"><mrow><mi>f</mi><mo lspace="0.278em" rspace="0.278em">:</mo><mrow><mi>ℝ</mi><mo stretchy="false">→</mo><mi>ℝ</mi></mrow></mrow></math> be defined by the rule <math id="S5.SS2.Thmtheorem5.p4.m3" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math>.</span>
+<span class="ltx_p">Let <math>
+  <mrow>
+    <mi>f</mi>
+    <mo lspace="0.2222em" rspace="0.2222em">:</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+    <mo stretchy="false">→</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+  </mrow>
+</math> be defined by the rule <math id="S5.SS2.Thmtheorem5.p4.m3" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math>.</span>
 </span>
 </td>
 </tr>
@@ -328,7 +356,21 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.2.7.</h3>
 <div id="S5.SS2.Thmtheorem7.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">Using the skeleton version of the proof below, complete the proof of the statement: the function <math id="S5.SS2.Thmtheorem7.p1.m1" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math> is <span class="ltx_text ltx_font_bold">surjective</span>.</p>
+<p class="ltx_p">Using the skeleton version of the proof below, complete the proof of the statement: the function <math>
+  <mrow>
+    <mi>f</mi>
+    <mo lspace="0.2222em" rspace="0.2222em">:</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+    <mo stretchy="false">→</mo>
+    <msub>
+      <mi>ℝ</mi>
+      <mo form="prefix" stretchy="false">+</mo>
+    </msub>
+  </mrow>
+</math> defined by <math id="S5.SS2.Thmtheorem7.p1.m1" class="ltx_Math" alttext="f(x)=x^{3}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msup><mi>x</mi><mn>3</mn></msup></mrow></math> is <span class="ltx_text ltx_font_bold">surjective</span>.</p>
 </div>
 <div id="S5.SS2.Thmtheorem7.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">A Skeleton Version of a Function <math id="S5.SS2.Thmtheorem7.p2.m1" class="ltx_Math" alttext="f" display="inline"><mi>f</mi></math> Being Surjective.</span></p>
@@ -395,7 +437,15 @@ x+1&amp;x\geq 0\end{cases}" display="inline"><mrow><mrow><mi>g</mi><mo>⁢</mo><
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>5.2.8.</h3>
 <div id="S5.SS2.Thmtheorem9.p1" class="ltx_para">
-<p class="ltx_p">Determine whether the function <math id="S5.SS2.Thmtheorem9.p1.m1" class="ltx_Math" alttext="f(n)=\begin{cases}n+1&amp;n\text{ is even}\\
+<p class="ltx_p">Determine whether the function <math>
+  <mrow>
+    <mi>f</mi>
+    <mo lspace="0.2222em" rspace="0.2222em">:</mo>
+    <mi>ℤ</mi>
+    <mo stretchy="false">→</mo>
+    <mi>ℤ</mi>
+  </mrow>
+</math> defined by <math id="S5.SS2.Thmtheorem9.p1.m1" class="ltx_Math" alttext="f(n)=\begin{cases}n+1&amp;n\text{ is even}\\
 2n&amp;n\text{ is odd}\end{cases}" display="inline"><mrow><mrow><mi>f</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo>{</mo><mtable columnspacing="5pt" rowspacing="0pt"><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>n</mi><mo>⁢</mo><mtext> is even</mtext></mrow></mtd></mtr><mtr><mtd class="ltx_align_left" columnalign="left"><mrow><mn>2</mn><mo>⁢</mo><mi>n</mi></mrow></mtd><mtd class="ltx_align_left" columnalign="left"><mrow><mi>n</mi><mo>⁢</mo><mtext> is odd</mtext></mrow></mtd></mtr></mtable></mrow></mrow></math> is injective and/or surjective.</p>
 </div>
 </div>
